deploy: b8cd6795058b6f35a74cbc1bc195d213457a5e87

--- a/ApproximateDecomposition.html
+++ b/ApproximateDecomposition.html
@@ -38,7 +38,7 @@ write
 <mrow><mn>2</mn><msup><mrow><mi>β</mi></mrow><mrow><mi>ℓ</mi></mrow></msup></mrow></mfrac>
 </mrow></math>
 <!-- l. 133 --><p class='nopar'> (using nearest-integer rounding and identifying <!-- l. 134 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>γ</mi></math>
-with its integer representative). The polynomial case is analogous, coefficient-wise.
+with its integer representative)The polynomial case is analogous, coefficient-wise.
                                                                                          
                                                                                          
 </p>
