--- a/BasisofaPolynomialRing.html
+++ b/BasisofaPolynomialRing.html
@@ -12,15 +12,15 @@
    <h4 class='subsectionHead' id='basis-of-a-polynomial-ring'><span class='titlemark'>A-10.5   </span> <a id='x42-47000A-10.5'></a>Basis of a Polynomial Ring</h4>
 <!-- l. 357 --><p class='noindent'>Given an <!-- l. 357 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>(</mo><mi>n</mi> <mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>-degree
 polynomial ring <!-- l. 357 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>ℤ</mi><mo class='MathClass-open' stretchy='false'>[</mo><mi>X</mi><mo class='MathClass-close' stretchy='false'>]</mo><mo class='MathClass-bin' stretchy='false'>∕</mo><mo class='MathClass-open' stretchy='false'>(</mo><msup><mrow><mi>X</mi></mrow><mrow><mi>n</mi></mrow></msup> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>1</mn><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>,
-a basis of the polynomial ring is defined to be a set of polynomials that satisfy the following two
+a basis of the polynomial ring is defined as a set of polynomials that satisfies the following two
 requirements:
 </p>
    <ul class='itemize1'>
    <li class='itemize'><span class='rm-lmbx-10x-x-109'>Linear  Independence</span>:  Each  polynomial  in  the  basis  set  cannot  be  expressed  as  a  linear
    combination of the other polynomials in the same set
    </li>
-   <li class='itemize'><span class='rm-lmbx-10x-x-109'>Spanning the Polynomial Ring: </span>A linear combinations of the polynomials in the basis set
-   can express any polynomials in the polynomial ring</li></ul>
+   <li class='itemize'><span class='rm-lmbx-10x-x-109'>Spanning the Polynomial Ring: </span>A linear combination of the polynomials in the basis set
+   can express any polynomial in the polynomial ring</li></ul>
 <!-- l. 365 --><p class='indent'>   Note that for a <!-- l. 365 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>(</mo><mi>n</mi> <mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>-degree
 polynomial ring, the number of polynomials that form a basis of the polynomial ring is exactly
 <!-- l. 365 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math>.
