--- a/Decomposition.html
+++ b/Decomposition.html
@@ -10,9 +10,9 @@
 </head><body>
    <!-- l. 402 --><div class='crosslinks'><p class='noindent'>[<a href='PolynomialRing.html'>prev</a>][<a href='BasicMath.html#Decomposition.html'>parent</a>][<a href='RootsofUnity.html'>next</a>]</p></div>
    <h3 class='sectionHead' id='decomposition'><span class='titlemark'>A-6   </span> <a id='x25-27000A-6'></a>Decomposition</h3>
-<!-- l. 1 --><p class='noindent'>Decomposition is a mathematical technique to convert a large-base number into a mathematical formula
-expressing the same value in a smaller base. This section will explain number decomposition and
-polynomial decomposition.
+<!-- l. 1 --><p class='noindent'>Decomposition is a mathematical technique used to convert a large-base number into a mathematical
+formula that expresses the same value in a smaller base. This section will explain number decomposition
+and polynomial decomposition.
    
 </p>
    <div class='subsectionTOCS hrr'>
