--- a/Decryption3.html
+++ b/Decryption3.html
@@ -10,10 +10,10 @@
 </head><body>
    <!-- l. 47 --><div class='crosslinks'><p class='noindent'>[<a href='Encryption3.html'>prev</a>][<a href='GLev.html#Decryption3.html'>parent</a>][<a href='LevandRLev.html'>next</a>]</p></div>
    <h4 class='subsectionHead' id='decryption3'><span class='titlemark'>B-5.2   </span> <a id='x84-97000B-5.2'></a>Decryption</h4>
-<!-- l. 49 --><p class='noindent'>It is sufficient to decrypt the GLev ciphertext’s any
-<!-- l. 49 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>i</mi></math>-th GLWE ciphertext
-by using the secret <!-- l. 49 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>S</mi></math>,
-with the scaling factor <!-- l. 49 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mi mathvariant='normal'>Δ</mi></mrow><mrow><mi>i</mi></mrow></msub> <mo class='MathClass-rel' stretchy='false'>=</mo> <mstyle displaystyle='true'><mfrac><mrow> <mi>q</mi>
+<!-- l. 49 --><p class='noindent'>It is sufficient to decrypt any <!-- l. 49 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>i</mi></math>-th
+GLWE ciphertext of the GLev ciphertext by using the secret
+<!-- l. 49 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>S</mi></math>, with the
+scaling factor <!-- l. 49 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mi mathvariant='normal'>Δ</mi></mrow><mrow><mi>i</mi></mrow></msub> <mo class='MathClass-rel' stretchy='false'>=</mo> <mstyle displaystyle='true'><mfrac><mrow> <mi>q</mi>
 </mrow><mrow><msup><mrow><mi>β</mi></mrow><mrow><mi>i</mi></mrow></msup></mrow></mfrac></mstyle></mrow></math>.
                                                                                          
                                                                                          
