--- a/Examples.html
+++ b/Examples.html
@@ -22,7 +22,7 @@ because: </p>
    <li class='itemize'><span class='rm-lmbx-10x-x-109'>Associative: </span>For any integer <!-- l. 49 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mi>b</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mi>c</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <mi>ℤ</mi></mrow></math>,
    <!-- l. 49 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>(</mo><mi>a</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>b</mi><mo class='MathClass-close' stretchy='false'>)</mo> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>c</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>a</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mo class='MathClass-open' stretchy='false'>(</mo><mi>b</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>c</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>.
    </li>
-   <li class='itemize'><span class='rm-lmbx-10x-x-109'>Identity: </span>The additive identity is 0, because for any <!-- l. 50 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <mi>ℤ</mi></mrow></math>,
+   <li class='itemize'><span class='rm-lmbx-10x-x-109'>Identity: </span>The additive identity is 0 because, for any <!-- l. 50 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <mi>ℤ</mi></mrow></math>,
    <!-- l. 50 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>0</mn> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>a</mi></mrow></math>.
    </li>
    <li class='itemize'><span class='rm-lmbx-10x-x-109'>Inverse: </span>For each <!-- l. 51 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <mi>ℤ</mi></mrow></math>,
@@ -33,7 +33,7 @@ because: </p>
    <!-- l. 52 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>b</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>b</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>a</mi></mrow></math>.</li></ul>
 <!-- l. 55 --><p class='indent'>   <!-- l. 55 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
 </p><!-- l. 57 --><p class='noindent'><!-- l. 57 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>ℤ</mi></math> is a monoid under
-multiplication (<!-- l. 57 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mo class='MathClass-bin' stretchy='false'>⋅</mo></math>),
+multiplication (<!-- l. 57 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mo class='MathClass-bin' stretchy='false'>⋅</mo></math>)
 because: </p>
    <ul class='itemize1'>
    <li class='itemize'><span class='rm-lmbx-10x-x-109'>Closed: </span>For any integer <!-- l. 59 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mi>b</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <mi>ℤ</mi></mrow></math>,
@@ -51,8 +51,8 @@ because: </p>
    <li class='itemize'><span class='rm-lmbx-10x-x-109'>NO Inverse: </span>For an integer <!-- l. 62 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <mi>ℤ</mi></mrow></math>,
    its multiplicative inverse is <!-- l. 62 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle displaystyle='true'><mfrac><mrow><mn>1</mn>
 </mrow><mrow><mi>a</mi></mrow></mfrac></mstyle></math>,
-   but this is not necessarily an integer (<!-- l. 62 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-rel' stretchy='false'>∉</mo><mi>ℤ</mi></mrow></math>),
-   therefore not every element has a multiplicative inverse, so <!-- l. 62 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>(</mo><mi>ℤ</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mo class='MathClass-bin' stretchy='false'>⋅</mo><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>
+   but this is not necessarily an integer (<!-- l. 62 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-rel' stretchy='false'>∉</mo><mi>ℤ</mi></mrow></math>);
+   therefore, not every element has a multiplicative inverse. Thus, <!-- l. 62 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>(</mo><mi>ℤ</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mo class='MathClass-bin' stretchy='false'>⋅</mo><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>
    is not a group (though it is a monoid).</li></ul>
 <!-- l. 64 --><p class='noindent'><!-- l. 64 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
 </p><!-- l. 66 --><p class='noindent'><!-- l. 66 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mi>ℝ</mi></mrow><mrow><mo class='MathClass-bin' stretchy='false'>×</mo></mrow></msup></math>
