--- a/MatrixArithmetic.html
+++ b/MatrixArithmetic.html
@@ -128,8 +128,8 @@ derived:
 <span class='rm-lmri-10x-x-109'>Proof.</span> </span>
 </p><!-- l. 261 --><p class='indent'>
 <!-- l. 261 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
-</p><!-- l. 263 --><p class='indent'>   The properties described in A-10.3 can be demonstrated by expanding the formulas of both
-sides each equation by using a variable representation for each element in the vectors/matrices and
+</p><!-- l. 263 --><p class='indent'>   The properties described in A-10.3 can be demonstrated by expanding the formulas on both
+sides of each equation using a variable representation for each element in the vectors/matrices and
 comparing the resulting formulas. We leave this expansion as an exercise for the reader.
                                                                                         □
 </p>
