--- a/Overview1.html
+++ b/Overview1.html
@@ -81,25 +81,25 @@ any <!-- l. 58 --><math display='inline' xmlns='http://www.w3.org/1998/Math/Math
 polynomial ring <!-- l. 58 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mstyle mathvariant='script'><mi>R</mi></mstyle></mrow><mrow><mo class='MathClass-open' stretchy='false'>⟨</mo><mi>n</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mi>q</mi><mo class='MathClass-close' stretchy='false'>⟩</mo></mrow></msub></math>, a high-degree
 polynomial <!-- l. 58 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>f</mi></mrow><mrow><mi mathvariant='italic'>𝑏𝑖𝑔</mi></mrow></msub></math> can be divided
 by the polynomial modulo <!-- l. 58 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msup><mrow><mi>x</mi></mrow><mrow><mi>n</mi></mrow></msup> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>1</mn></mrow></math>,
-which gives:
+which yields:
 </p><!-- l. 60 --><p class='indent'>   <!-- l. 60 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mi>f</mi></mrow><mrow><mi mathvariant='italic'>𝑏𝑖𝑔</mi></mrow></msub> <mo class='MathClass-rel' stretchy='false'>=</mo> <mo class='MathClass-open' stretchy='false'>(</mo><msup><mrow><mi>x</mi></mrow><mrow><mi>n</mi></mrow></msup> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>1</mn><mo class='MathClass-close' stretchy='false'>)</mo> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mo class='MathClass-open' stretchy='false'>(</mo><msub><mrow><mi>f</mi></mrow><mrow><mi>q</mi></mrow></msub><mo class='MathClass-close' stretchy='false'>)</mo> <mo class='MathClass-bin' stretchy='false'>+</mo> <msub><mrow><mi>f</mi></mrow><mrow><mi>r</mi></mrow></msub> <mo class='MathClass-rel' stretchy='false'>≡</mo><msub><mrow><mi>f</mi></mrow><mrow><mi>r</mi></mrow></msub> <mo class='MathClass-rel' stretchy='false'>∈</mo><msub><mrow><mstyle mathvariant='script'><mi>R</mi></mstyle></mrow><mrow><mo class='MathClass-open' stretchy='false'>⟨</mo><mi>n</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mi>q</mi><mo class='MathClass-close' stretchy='false'>⟩</mo></mrow></msub></mrow></math>
 </p><!-- l. 62 --><p class='noindent'>, whereas <!-- l. 62 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>f</mi></mrow><mrow><mi>q</mi></mrow></msub></math> is a quotient
-polynomial and <!-- l. 62 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>f</mi></mrow><mrow><mi>r</mi></mrow></msub></math> is a remainder
+polynomial, and <!-- l. 62 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>f</mi></mrow><mrow><mi>r</mi></mrow></msub></math> is a remainder
 polynomial. In this case, <!-- l. 62 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>f</mi></mrow><mrow><mi mathvariant='italic'>𝑏𝑖𝑔</mi></mrow></msub></math>
-is congruent to (i.e., is in the same equivalence class as)
+is congruent to (i.e., it is in the same equivalence class as)
 <!-- l. 62 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>f</mi></mrow><mrow><mi>r</mi></mrow></msub></math>. Thus,
-<!-- l. 62 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>f</mi></mrow><mrow><mi>q</mi></mrow></msub></math> can be eliminated and
+<!-- l. 62 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>f</mi></mrow><mrow><mi>q</mi></mrow></msub></math> can be eliminated, and
 <!-- l. 62 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>f</mi></mrow><mrow><mi>r</mi></mrow></msub></math> (i.e., the simplified version of
-<!-- l. 62 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>f</mi></mrow><mrow><mi mathvariant='italic'>𝑏𝑖𝑔</mi></mrow></msub></math>) can be interchangeably used
+<!-- l. 62 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>f</mi></mrow><mrow><mi mathvariant='italic'>𝑏𝑖𝑔</mi></mrow></msub></math>) can be used interchangeably
 for polynomial operations <!-- l. 62 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mtext class='MathClass-open' stretchy='false'>(+,⋅)</mtext></mrow></math>
 in the polynomial ring. Polynomial simplification (i.e., reduction) in a polynomial ring is done by substituting
 <!-- l. 63 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msup><mrow><mi>x</mi></mrow><mrow><mi>n</mi></mrow></msup> <mo class='MathClass-rel' stretchy='false'>≡</mo><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></math> into
-<!-- l. 63 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>f</mi></mrow><mrow><mi mathvariant='italic'>𝑏𝑖𝑔</mi></mrow></msub></math>,
-because <!-- l. 63 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msup><mrow><mi>x</mi></mrow><mrow><mi>n</mi></mrow></msup> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>1</mn> <mo class='MathClass-rel' stretchy='false'>≡</mo><mn>0</mn></mrow></math>
+<!-- l. 63 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>f</mi></mrow><mrow><mi mathvariant='italic'>𝑏𝑖𝑔</mi></mrow></msub></math> because
+<!-- l. 63 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msup><mrow><mi>x</mi></mrow><mrow><mi>n</mi></mrow></msup> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>1</mn> <mo class='MathClass-rel' stretchy='false'>≡</mo><mn>0</mn></mrow></math>
 in the polynomial ring (this is the same as the case of a number ring modulo
-<!-- l. 63 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>p</mi></math> where we reduce a
+<!-- l. 63 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>p</mi></math>, where we reduce a
 number by substituting <!-- l. 63 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mn>0</mn></math>
-to <!-- l. 63 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>p</mi></math>). This way, a
+for <!-- l. 63 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>p</mi></math>). This way, a
 high-degree polynomial <!-- l. 63 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>f</mi></mrow><mrow><mi mathvariant='italic'>𝑏𝑖𝑔</mi></mrow></msub></math>
 can be recursively simplified to a polynomial of degree less than
 <!-- l. 63 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math> by recursively
@@ -193,23 +193,23 @@ polynomial ring <!-- l. 81 --><math display='inline' xmlns='http://www.w3.org/19
                                                                                          
    </figure>
    </div>
-<!-- l. 137 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>Congruency: </span>If two numbers are congruent, they are in the same <span class='rm-lmri-10x-x-109'>congruency class</span>. The same is true for
-two congruent polynomials. If the computation results of two mathematical formulas belong to the same
-congruency class, then their computations wrap around within modulo of their congruency. This is a
-useful property for cryptographic schemes where encryption &amp; decryption computations wrap
+<!-- l. 137 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>Congruency: </span>If two numbers are congruent, they belong to the same <span class='rm-lmri-10x-x-109'>congruence class</span>. The same is true
+for two congruent polynomials. If the computation results of two mathematical formulas belong to the
+same congruency class, then their computations wrap around within the modulus of their congruency.
+This is a useful property for cryptographic schemes where encryption &amp; decryption computations wrap
 around their values within a limited set of binary bits. Congruency is useful for simplifying
-computation. For example, a big number or a complex polynomial can be <span class='rm-lmri-10x-x-109'>normalized </span>to a
-simpler number or polynomial by using the congruency rule, which reduces the computation
+computations. For example, a large number or a complex polynomial can be <span class='rm-lmri-10x-x-109'>normalized </span>to a
+simpler number or polynomial by using the congruency rule, which reduces the computational
 overhead.
-</p><!-- l. 139 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>Polynomial Evaluation: </span>Note that two numbers that belong to the same congruency class are not necessarily the same
+</p><!-- l. 139 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>Polynomial Evaluation: </span>Note that two numbers that belong to the same congruence class are not necessarily the same
 number. For example, <!-- l. 139 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mn>5</mn> <mo class='MathClass-rel' stretchy='false'>≡</mo><mn>10</mn></mrow></math>
 modulo 5, but these two numbers are not the same. Likewise, two congruent polynomials are not the same. While
 two congruent polynomials in a polynomial ring can be interchangeably used for polynomial operations supported in
 the ring (i.e., <!-- l. 139 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mtext class='MathClass-open' stretchy='false'>(+,⋅)</mtext></mrow></math>),
 such as <!-- l. 139 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mi>f</mi></mrow><mrow><mn>1</mn></mrow></msub> <mo class='MathClass-bin' stretchy='false'>+</mo> <msub><mrow><mi>f</mi></mrow><mrow><mn>2</mn></mrow></msub></mrow></math>
 or <!-- l. 139 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mi>f</mi></mrow><mrow><mn>1</mn></mrow></msub> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mo class='MathClass-open' stretchy='false'>(</mo><msub><mrow><mi>f</mi></mrow><mrow><mn>2</mn></mrow></msub> <mo class='MathClass-bin' stretchy='false'>−</mo><msub><mrow><mi>f</mi></mrow><mrow><mn>3</mn></mrow></msub><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>, two
-congruent polynomials do not necessarily give the same result when they are evaluated for a certain variable
-value <!-- l. 139 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>x</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>a</mi></mrow></math>.
+congruent polynomials do not necessarily yield the same result when evaluated for a certain variable value
+<!-- l. 139 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>x</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>a</mi></mrow></math>.
 For example, in the previous example of <a href='#example'><span class='ts1-lmr10-x-x-109'>§</span>A-5.1.1<!-- tex4ht:ref: subsec:poly-ring-overview  --></a>, the two polynomials
 <!-- l. 139 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msup><mrow><mi>x</mi></mrow><mrow><mn>4</mn></mrow></msup> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>3</mn><msup><mrow><mi>x</mi></mrow><mrow><mn>3</mn></mrow></msup> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>11</mn><msup><mrow><mi>x</mi></mrow><mrow><mn>2</mn></mrow></msup> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>6</mn><mi>x</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>10</mn></mrow></math> and
 <!-- l. 139 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mn>3</mn><mi>x</mi></mrow></math> are congruent in the
@@ -230,7 +230,7 @@ Therefore, <!-- l. 139 --><math display='inline' xmlns='http://www.w3.org/1998/M
 same polynomial <!-- l. 139 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>M</mi></mrow><mrow><mn>2</mn></mrow></msub></math> if they
 are evaluated at the <!-- l. 139 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>x</mi></math>
 values such that <!-- l. 139 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msup><mrow><mi>x</mi></mrow><mrow><mi>n</mi></mrow></msup> <mo class='MathClass-rel' stretchy='false'>=</mo> <mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></math>,
-which make the <!-- l. 139 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msup><mrow><mi>x</mi></mrow><mrow><mi>n</mi></mrow></msup> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>1</mn></mrow></math> term
+which makes the <!-- l. 139 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msup><mrow><mi>x</mi></mrow><mrow><mi>n</mi></mrow></msup> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>1</mn></mrow></math> term
 0. The solutions for <!-- l. 139 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msup><mrow><mi>x</mi></mrow><mrow><mi>n</mi></mrow></msup> <mo class='MathClass-rel' stretchy='false'>=</mo> <mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></math>
 are called the <!-- l. 139 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math>-th
 roots of unity, which we will learn in <a href='RootsofUnity.html#roots-of-unity'><span class='ts1-lmr10-x-x-109'>§</span>A-7<!-- tex4ht:ref: subsec:poly-ring-overview  --></a> and <a href='RootsofUnityandCyclotomicPolynomialoverRings.html#roots-of-unity-and-cyclotomic-polynomial-over-rings'><span class='ts1-lmr10-x-x-109'>§</span>A-9<!-- tex4ht:ref: subsec:poly-ring-overview  --></a>. We summarize as follows:
