--- a/Preface.html
+++ b/Preface.html
@@ -13,7 +13,7 @@
 <!-- l. 270 --><p class='noindent'>Fully Homomorphic Encryption (FHE) is a cryptographic scheme that enables computations to be
 performed directly on encrypted data, as if the data were in plaintext. After all computations are
 performed on the encrypted data, it can be decrypted to reveal the result. The decrypted value matches
-the result that would have been obtained if the same computations were applied to the plaintext
+the result that would have been obtained if the same computations had been applied to the plaintext
 data.
                                                                                          
                                                                                          
@@ -32,17 +32,17 @@ and confidential while maintaining the transparency and integrity of the executi
 Other applications of FHE include secure outsourcing of data analytics, encrypted database
 queries, privacy-preserving searches, efficient multi-party computation for digital signatures, and
 more.
-</p><!-- l. 278 --><p class='indent'>   This book is designed to help the reader understand how FHE works from the mathematical level. The
+</p><!-- l. 278 --><p class='indent'>   This book is designed to help the reader understand how FHE works at the mathematical level. The
 book comprises the following four parts:
 </p><!-- l. 280 --><p class='indent'>   <!-- l. 280 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
 </p>
    <ul class='itemize1'>
-   <li class='itemize'><a href='BasicMath.html#basic-math'><span class='rm-lmbx-10x-x-109'>Part I</span></a><span class='rm-lmbx-10x-x-109'>: </span><a href='BasicMath.html#basic-math'><span class='rm-lmbx-10x-x-109'>Basic Math</span><!-- tex4ht:ref: part:basic-math  --></a> explains necessary background concepts for FHE, such as Group, Field,
-   Order, Polynomial Ring, Cyclotomic Polynomial, Vectors and Matrices, Chinese Remainder
-   Theorem, Taylor Series, Polynomial Interpolation, and Fast Fourier Transform.
+   <li class='itemize'><a href='BasicMath.html#basic-math'><span class='rm-lmbx-10x-x-109'>Part I</span></a><span class='rm-lmbx-10x-x-109'>: </span><a href='BasicMath.html#basic-math'><span class='rm-lmbx-10x-x-109'>Basic Math</span><!-- tex4ht:ref: part:basic-math  --></a> explains necessary background concepts for FHE, such as groups, fields,
+   orders, polynomial rings, cyclotomic polynomials, vectors and matrices, the Chinese Remainder
+   Theorem, Taylor series, polynomial interpolation, and the Fast Fourier Transform.
    </li>
    <li class='itemize'><a href='PostquantumCryptography.html#postquantum-cryptography'><span class='rm-lmbx-10x-x-109'>Part II</span></a><span class='rm-lmbx-10x-x-109'>: </span><a href='PostquantumCryptography.html#postquantum-cryptography'><span class='rm-lmbx-10x-x-109'>Post-quantum  Cryptography</span><!-- tex4ht:ref: part:pqc  --></a> explains  well-known  lattice-based  cryptographic
-   schemes, which are LWE, RLWE, GLWE, GLev, and GGSW cryptosystems.
+   schemes, which include LWE, RLWE, GLWE, GLev, and GGSW cryptosystems.
    </li>
    <li class='itemize'><a href='GenericFullyHomomorphicEncryption.html#generic-fully-homomorphic-encryption'><span class='rm-lmbx-10x-x-109'>Part III</span></a><span class='rm-lmbx-10x-x-109'>: </span><a href='GenericFullyHomomorphicEncryption.html#generic-fully-homomorphic-encryption'><span class='rm-lmbx-10x-x-109'>Generic Fully Homomorphic Encryption</span><!-- tex4ht:ref: part:generic-fhe  --></a> explains the generic techniques of
    FHE adopted by many existing schemes, such as homomorphic addition, multiplication, modulus
