--- a/Projection.html
+++ b/Projection.html
@@ -60,22 +60,22 @@ Thus, <!-- l. 291 --><math display='inline' xmlns='http://www.w3.org/1998/Math/M
 </mrow><mrow><mo class='MathClass-rel' stretchy='false'>|</mo><mo class='MathClass-rel' stretchy='false'>|</mo><mi>b</mi><mo class='MathClass-rel' stretchy='false'>|</mo><msup><mrow><mo class='MathClass-rel' stretchy='false'>|</mo></mrow><mrow><mn>2</mn></mrow></msup></mrow></mfrac></mstyle><mover accent='true'><mrow><mi>b</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></mrow></math>.
 </p><!-- l. 293 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>Orthogonal Projection: </span>Given the vector <!-- l. 293 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi>x</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></math>
 and a set of mutually orthogonal vectors <!-- l. 293 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mover accent='true'><mrow><mi>p</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></mrow><mrow><mn>0</mn></mrow></msub><mo class='MathClass-punc' stretchy='false'>,</mo><msub><mrow><mover accent='true'><mrow><mi>p</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></mrow><mrow><mn>1</mn></mrow></msub><mo class='MathClass-punc' stretchy='false'>,</mo><mo class='MathClass-rel' stretchy='false'>⋯</mo><mspace class='thinspace' width='0.17em'></mspace><mo class='MathClass-punc' stretchy='false'>,</mo><msub><mrow><mover accent='true'><mrow><mi>p</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></mrow><mrow><mi>n</mi><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></msub></mrow></math>
-which span the plane (or subspace) <!-- l. 293 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>P</mi></math>,
+that span the plane (or subspace) <!-- l. 293 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>P</mi></math>,
 the orthogonal projection <!-- l. 293 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mstyle class='text'><mtext class='textsf' mathvariant='sans-serif'>𝖯𝗋𝗈𝗃</mtext></mstyle></mrow><mrow><mi>P</mi> </mrow></msub><mo class='MathClass-open' stretchy='false'>(</mo><mover accent='true'><mrow><mi>x</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math> measures
-how much element of plane <!-- l. 293 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>P</mi></math>
+how much of the element of the plane <!-- l. 293 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>P</mi></math>
 is contained in <!-- l. 293 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi>x</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></math> (i.e.,
-filtering <!-- l. 293 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi>x</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></math> by plane
+filtering <!-- l. 293 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi>x</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></math> by the plane
 <!-- l. 293 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>P</mi></math>). In the example of
 <a href='#x41-46002r2'>Figure 3b<!-- tex4ht:ref: subsec:matrix-arithmetic  --></a>, vector <!-- l. 293 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi>x</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></math>’s
-projection on plane <!-- l. 293 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>P</mi></math>
-is shown as a red arrow, which is computed by summing the projection of
-<!-- l. 293 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi>x</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></math> on each of the mutually
+projection onto plane <!-- l. 293 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>P</mi></math>
+is shown as a red arrow, which is computed by summing the projections of
+<!-- l. 293 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi>x</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></math> onto each of the mutually
 orthogonal vectors <!-- l. 293 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mover accent='true'><mrow><mi>p</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></mrow><mrow><mn>0</mn></mrow></msub><mo class='MathClass-punc' stretchy='false'>,</mo><msub><mrow><mover accent='true'><mrow><mi>p</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></mrow><mrow><mn>1</mn></mrow></msub><mo class='MathClass-punc' stretchy='false'>,</mo><mo class='MathClass-rel' stretchy='false'>⋯</mo><mspace class='thinspace' width='0.17em'></mspace><mo class='MathClass-punc' stretchy='false'>,</mo><msub><mrow><mover accent='true'><mrow><mi>p</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></mrow><mrow><mi>n</mi><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></msub></mrow></math>
 that span plane <!-- l. 293 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>P</mi></math>. This
 is equivalent to <!-- l. 293 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mstyle class='text'><mtext class='textsf' mathvariant='sans-serif'>𝖯𝗋𝗈𝗃</mtext></mstyle></mrow><mrow><mi>P</mi> </mrow></msub><mo class='MathClass-open' stretchy='false'>(</mo><mover accent='true'><mrow><mi>a</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover><mo class='MathClass-close' stretchy='false'>)</mo> <mo class='MathClass-rel' stretchy='false'>=</mo><munderover accent='false' accentunder='false'><mrow> <mi class='MathClass-op'>∑</mi><mo> ⁡<!-- FUNCTION APPLICATION --></mo>
   </mrow><mrow><mi>i</mi><mo class='MathClass-rel' stretchy='false'>=</mo><mn>0</mn></mrow><mrow><mi>n</mi><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></munderover><msub><mrow><mstyle class='text'><mtext class='textsf' mathvariant='sans-serif'>𝖯𝗋𝗈𝗃</mtext></mstyle></mrow><mrow><msub><mrow><mover accent='true'><mrow><mi>p</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></mrow><mrow><mi>i</mi></mrow></msub></mrow></msub><mo class='MathClass-open' stretchy='false'>(</mo><mover accent='true'><mrow><mi>a</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>. The
 computation of <!-- l. 293 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mstyle class='text'><mtext class='textsf' mathvariant='sans-serif'>𝖯𝗋𝗈𝗃</mtext></mstyle></mrow><mrow><mi>P</mi> </mrow></msub><mo class='MathClass-open' stretchy='false'>(</mo><mover accent='true'><mrow><mi>x</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math> can be
-thought of transforming <!-- l. 293 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi>v</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></math>
+thought of as transforming <!-- l. 293 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi>v</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></math>
 into a different coordinate system that expresses the vector space in terms of
 <!-- l. 293 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math>
 mutually orthogonal vectors.
@@ -130,7 +130,7 @@ mutually orthogonal vectors.
 vector space, any mutually orthogonal <!-- l. 339 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math>
 vectors in the vector space span a plane (or subspace)
 <!-- l. 339 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>P</mi></math> that is
-identical to the entire vector space. Further, an orthogonal projection of any vector in the vector space on
+identical to the entire vector space. Further, the orthogonal projection of any vector in the vector space on
 <!-- l. 339 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>P</mi></math> is
 guaranteed to be a unique vector.
 </p><!-- l. 341 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>Non-orthogonal Basis: </span>In an <!-- l. 341 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math>-dimensional
@@ -141,11 +141,11 @@ the <!-- l. 341 --><math display='inline' xmlns='http://www.w3.org/1998/Math/Mat
 <!-- l. 341 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>P</mi></math> comprised of these
                                                                                          
                                                                                          
-<!-- l. 341 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math> vectors forms a basis of the
+<!-- l. 341 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math> vectors forms a basis for the
 entire vector space <!-- l. 341 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>V</mi> </mrow></math>, and the
 matrix-to-vector multiplication <!-- l. 341 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>P</mi><mover accent='true'><mrow><mi>v</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></mrow></math>
 for each <!-- l. 341 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi>v</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></math>
-in the vector space is guaranteed to give a unique vector. However, the formula
+in the vector space is guaranteed to yield a unique vector. However, the formula
 <!-- l. 341 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mstyle class='text'><mtext class='textsf' mathvariant='sans-serif'>𝖯𝗋𝗈𝗃</mtext></mstyle></mrow><mrow><mi>P</mi> </mrow></msub><mo class='MathClass-open' stretchy='false'>(</mo><mover accent='true'><mrow><mi>v</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math> is not a valid geometric
 projection of the vector <!-- l. 341 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mover accent='true'><mrow><mi>v</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></mrow><mo accent='true' stretchy='false'>→</mo></mover></math>
 on <!-- l. 341 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>P</mi></math>, because
@@ -153,7 +153,7 @@ the <!-- l. 341 --><math display='inline' xmlns='http://www.w3.org/1998/Math/Mat
 basis vectors are non-orthogonal. Yet, the computation of
 <!-- l. 341 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>P</mi><mover accent='true'><mrow><mi>v</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></mrow></math> can be thought of as
 uniquely transforming <!-- l. 341 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi>v</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></math>
-into a different coordinate system that expresses the vector space in respect to
+into a different coordinate system that expresses the vector space with respect to
 <!-- l. 341 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math> non-orthogonal
 vectors in <!-- l. 341 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>P</mi></math>.
 </p>
