--- a/ModuloDivision.html
+++ b/ModuloDivision.html
@@ -18,10 +18,9 @@ division </span>of <!-- l. 158 --><math display='inline' xmlns='http://www.w3.or
 by <!-- l. 158 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>a</mi></math> modulo
 <!-- l. 158 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math> is equivalent to computing
 the <span class='rm-lmri-10x-x-109'>modular </span>multiplication <!-- l. 158 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>b</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><msup><mrow><mi>a</mi></mrow><mrow><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></msup><mspace width='0.2em'></mspace><mo class='MathClass-bin' stretchy='false'> mod</mo><mspace width='0.2em'></mspace> <mi>q</mi></mrow></math>.
-The result of <span class='rm-lmri-10x-x-109'>modulo division </span>is different from that of numeric division,
-because <span class='rm-lmri-10x-x-109'>modulo division </span>always gives an integer (a residue modulo
-<!-- l. 158 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>) (as it multiplies two
-integers modulo <!-- l. 158 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>),
+The result of <span class='rm-lmri-10x-x-109'>modulo division </span>is different from that of numeric division because <span class='rm-lmri-10x-x-109'>modulo division </span>always gives an integer (a residue
+modulo <!-- l. 158 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>) (as it multiplies
+two integers modulo <!-- l. 158 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>),
 whereas numeric division gives a real number. The inverse of an integer modulo
 <!-- l. 158 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math> can be
 computed using the extended Euclidean algorithm (<a href='https://www.youtube.com/watch?v=fz1vxq5ts5I'>YouTube tutorial</a>).
