--- a/VectorArithmetic.html
+++ b/VectorArithmetic.html
@@ -10,8 +10,8 @@
 </head><body>
    <!-- l. 3 --><div class='crosslinks'><p class='noindent'>[<a href='VectorandMatrix.html#VectorArithmetic.html'>parent</a>][<a href='VariousTypesofMatrix.html'>next</a>]</p></div>
    <h4 class='subsectionHead' id='vector-arithmetic'><span class='titlemark'>A-10.1   </span> <a id='x38-43000A-10.1'></a>Vector Arithmetic</h4>
-<!-- l. 6 --><p class='noindent'>This section explains basic arithmetic of vector and matrix computations, and advanced concepts such as
-vector/plane projection and basis of planes (or spaces).
+<!-- l. 6 --><p class='noindent'>This section explains the basic arithmetic of vector and matrix computations, as well as advanced
+concepts such as vector/plane projection and the basis of planes (or spaces).
 </p>
    <div class='tcolorbox tcolorbox' id='tcolobox-29'>     
 <div class='tcolorbox-title'>
