--- a/Preface.html
+++ b/Preface.html
@@ -52,9 +52,8 @@ book comprises the following four parts:
    schemes: TFHE, BFV, CKKS, and BGV, as well as their RNS-variant versions.</li></ul>
 <!-- l. 294 --><p class='indent'>   <!-- l. 294 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
 </p><!-- l. 300 --><p class='indent'>   This book is available both as an <a href='https://arxiv.org/abs/2503.05136'><span class='rm-lmbx-10x-x-109'>arXiv PDF</span></a> and on an <a href='https://fhetextbook.github.io'><span class='rm-lmbx-10x-x-109'>auto-generated website</span></a> (powered by
-<a href='https://www.kodymirus.cz/overleaf-html-sample/main.html'>make4ht</a>). Please report any bugs or suggestions regarding the draft to the <a href='https://github.com/fhetextbook/fhe-textbook/issues'><span class='rm-lmbx-10x-x-109'>Issues Board</span></a>. As this book is
-an evolving open project, we welcome FHE experts to join us as collaborators and help expand the
-draft.
+<a href='https://www.kodymirus.cz/overleaf-html-sample/main.html'>make4ht</a>). This book is an evolving, open project; please report any errors or suggestions regarding the
+draft on the <a href='https://github.com/fhetextbook/fhe-textbook/issues'><span class='rm-lmbx-10x-x-109'>Issues Board</span></a>.
    
                                                                                          
                                                                                          
