--- a/Discussion1.html
+++ b/Discussion1.html
@@ -13,7 +13,7 @@
 <!-- l. 61 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>Noise Growth:  </span>Note that after decryption, the original ciphertext
 <!-- l. 61 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>C</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi mathvariant='normal'>Λ</mi></mrow></math>’s noise
 <!-- l. 61 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>E</mi></math> stays
-the same as before. This means that ciphertext-to-plaintext addition does not increase the noise
+the same as before. This means that ciphertext-to-plaintext multiplication does not increase the noise
 level.
                                                                                          
                                                                                          
